--- a/style.css
+++ b/style.css
@@ -1,23 +1,66 @@
 #container {
-    background-color: #c7c5c5;
-    padding: 20px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    display: flex;
-    max-width: 1225px;
-    inline-size: auto;
-    border-radius: 5px;
-    flex-wrap: wrap;
+  background-color: #c7c5c5;
+  padding: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  max-width: 1225px;
+  inline-size: auto;
+  border-radius: 5px;
+  flex-wrap: wrap;
 }
 
 #newsArticle {
-    background-color: #f0efef;
-    padding: 25px;
-    max-width: 500px;
-    margin: 30px;
-    inline-size: auto;
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgb(90, 90, 90);
-    border-radius: 5px;
+  background-color: #f0efef;
+  padding: 25px;
+  max-width: 500px;
+  margin: 30px;
+  inline-size: auto;
+  border-style: solid;
+  border-width: 1px;
+  border-color: rgb(90, 90, 90);
+  border-radius: 5px;
+}
+
+/* NAVBAR */
+
+#navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #f0f0f0;
+  box-shadow: 0px 1px 5px 1px rgba(184, 184, 184, 0.63);
+  padding: 10px 50px;
+}
+
+.logo {
+  font-size: 20px;
+  font-weight: bold;
+  color: #333;
+  text-decoration: none;
+  margin-right: 20px;
+}
+
+.links-list {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.links-list li {
+  padding: 5px 10px;
+}
+
+.links-list li a {
+  font-size: 12px;
+  color: black;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.links-list li:hover {
+  background-color: darkgray;
+  border-radius: 30px;
 }
