--- a/style.css
+++ b/style.css
@@ -1,25 +1,31 @@
-#container {
-  background-color: #c7c5c5;
-  padding: 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 0px;
+  margin: 0px;
+}
+
+#wrapper {
   display: flex;
-  max-width: 1225px;
-  inline-size: auto;
-  border-radius: 5px;
-  flex-wrap: wrap;
+  justify-content: center;
+  padding: 10px;
+}
+
+#container {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  background-color: #f0f0f0;
+  padding: 20px;
+  margin: 20px 0px;
+  border-radius: 10px;
 }
 
 #newsArticle {
-  background-color: #f0efef;
+  background-color: white;
   padding: 25px;
   max-width: 500px;
   margin: 30px;
-  inline-size: auto;
-  border-style: solid;
-  border-width: 1px;
-  border-color: rgb(90, 90, 90);
-  border-radius: 5px;
+  border: solid 2px rgb(209, 207, 207);
+  border-radius: 30px;
 }
 
 /* NAVBAR */
@@ -29,38 +35,40 @@
   justify-content: space-between;
   align-items: center;
   background-color: #f0f0f0;
-  box-shadow: 0px 1px 5px 1px rgba(184, 184, 184, 0.63);
-  padding: 10px 50px;
+  box-shadow: 0px 1px 5px 1px rgba(184, 184, 184, 0.5);
+  padding: 15px 50px;
 }
 
 .logo {
   font-size: 20px;
   font-weight: bold;
-  color: #333;
+  color: black;
   text-decoration: none;
-  margin-right: 20px;
+  margin-right: 10px;
 }
 
-.links-list {
+.links-ul {
   display: flex;
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-.links-list li {
+.links-ul li a {
   padding: 5px 10px;
 }
 
-.links-list li a {
-  font-size: 12px;
+.links-ul li a {
+  font-size: 13px;
   color: black;
   text-decoration: none;
   text-transform: uppercase;
   font-weight: bold;
+  letter-spacing: 2px;
 }
 
-.links-list li:hover {
+.links-ul li a:hover {
   background-color: darkgray;
   border-radius: 30px;
+  color: white;
 }
